<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nasdanika.demos</groupId>
	<version>2025.10.0</version>
	<artifactId>maven-graph</artifactId>
	<packaging>jar</packaging>
	<name>Generation of a ECharts graph from Maven dependencies</name>

	<dependencies>

        <!-- Forcing SLF4j version to see how graph will work -->  
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>       
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>2.0.17</version>
        </dependency>    	
	
		<dependency>			
			<groupId>org.nasdanika.models.echarts</groupId>
			<version>2025.10.0</version>
			<artifactId>graph</artifactId>
		</dependency>				
        <dependency>            
            <groupId>org.nasdanika.html</groupId>
            <version>2025.10.0</version>
            <artifactId>3d-force-graph</artifactId>
        </dependency>               
		<dependency>			
			<groupId>org.nasdanika.models.maven</groupId>
			<artifactId>model</artifactId>
			<version>2025.10.0</version>
		</dependency>
		
        <dependency>
          <groupId>com.webcohesion.ofx4j</groupId>
          <artifactId>ofx4j</artifactId>
          <version>1.39</version>
        </dependency>		
		
		<dependency>
		    <groupId>org.jgrapht</groupId>
		    <artifactId>jgrapht-core</artifactId>
		    <version>1.5.2</version>
		</dependency>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>6.0.0</version>
		    <scope>test</scope>
		</dependency>		
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <version>6.0.0</version>
		    <scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- For building a minimal distribution -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.7.1</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/dist/lib
							</outputDirectory>
							<useRepositoryLayout>true</useRepositoryLayout>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
		        <plugin>
		            <groupId>org.apache.maven.plugins</groupId>
	        	    <artifactId>maven-failsafe-plugin</artifactId>
		            <version>3.5.4</version>
				    <executions>
				        <execution>
				            <goals>
				                <goal>integration-test</goal>
				                <goal>verify</goal>
			        	    </goals>
				        </execution>
				    </executions>
		        </plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.7.1</version>
				<configuration>
					<outputDirectory>${project.build.directory}</outputDirectory>
					<formats>zip</formats>
					<appendAssemblyId>false</appendAssemblyId>
					<finalName>nsd-demo-cli-${project.version}</finalName>
					<descriptors>
						<descriptor>src/assembly/dist.xml</descriptor>
					</descriptors>
				</configuration>
			        <executions>
			          <execution>
			            <id>create-archive</id>
			            <phase>verify</phase>
			            <goals>
			              <goal>single</goal>
			            </goals>
			          </execution>
			        </executions>
			</plugin>		        			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<organization>
		<name>Nasdanika</name>
		<url>https://github.com/Nasdanika</url>
	</organization>

	<developers>
		<developer>
			<id>pvlasov</id>
			<name>Pavel Vlasov</name>
			<email>Pavel.Vlasov@nasdanika.org</email>
			<roles>
				<role>Lead Developer</role>
			</roles>
			<timezone>-5</timezone>
		</developer>
	</developers>
</project>